# pi-compute

./: .gitignore  CMakeLists.txt  README.md
benchmark-results/: bench_amd_20260311_225605.txt  bench_graviton3_20260311_225606.txt  bench_graviton4_20260311_225606.txt  bench_intel_20260311_225604.txt
memory-bank/: activeContext.md  lessons-learned.md  memories.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
plans/: architecture.md  pi-computation-research.md
scripts/: bench_architectures.sh  benchmark.sh  run_pi.sh  setup.sh  setup_cloud_gpu.sh  verify_pi.py
src/: CMakeLists.txt  main.cpp
src/arithmetic/: flint_multiplier.cpp  flint_multiplier.h  gmp_multiplier.cpp  gmp_multiplier.h  gpu_ntt_multiplier.cpp  gpu_ntt_multiplier.h  int_ntt_multiplier.cpp  int_ntt_multiplier.h  multiplier.h  newton_divider.cpp  newton_divider.h
src/engine/: binary_splitting.cpp  binary_splitting.h  pi_engine.cpp  pi_engine.h
src/gpu/: carry_propagation.cu  carry_propagation.h  int_ntt.cu  int_ntt.h  ntt_engine.cu  ntt_engine.h  pointwise_multiply.cu  pointwise_multiply.h
src/io/: base_converter.cpp  base_converter.h  chunked_writer.cpp  chunked_writer.h
tests/: CMakeLists.txt  test_base_converter.cpp  test_binary_splitting.cpp  test_chunked_writer.cpp  test_gmp_multiplier.cpp  test_gpu_ntt_multiplier.cpp  test_newton_divider.cpp  test_pi_engine.cpp  test_validation.cpp
tests/data/: fetch_reference.py  pi_checksums.json
